2010-10-22  Nils Springob <nils@nicai-systems.de>

	* serial.h: serial_open() calls will now return -1 on error (no call to exit())
	* buspirate.c: (Dito.)
	* jtagmkII.c: (Dito.)
	* butterfly.c: (Dito.)
	* jtagmkI.c: (Dito.)
	* arduino.c: (Dito.)
	* avr910.c: (Dito.)
	* stk500.c: (Dito.)
	* ser_avrdoper.c: (Dito.)
	* stk500v2.c: (Dito.)
	* ser_posix.c: (Dito.)
	* usb_libusb.c: (Dito.)

2010-07-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #30566: MinGW + Ubuntu 9.04
	* stk500v2.c (stk500v2_open): use same condition to refer to the AVR
	Doper support as used in the definition in ser_avrdoper.c.
	(Thanks to Christian Starkjohann for the analysis of the problem.)

2010-07-19  Michal Ludvig <mludvig@logix.net.nz>

	* buspirate.c: Added compatibility with BusPirate "NewUI" firmware 5.x
	  (contributed by Kari Knuuttila)

2010-07-12  Nils Springob <nils@nicai-systems.de>

	* avrdude.conf.in (atmega88p): New device.

2010-06-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #29913: 246 Byte Bug - AVRdude crashes
	doc/avrdude.texi (Troubleshooting): Mention the libusb 0.1 API
	wrapper issue that is present in some Linux versions.

2010-03-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #29263: Can't build avrdude on windows using latest cygwin 1.7.1
	* doc/avrdude.texi: Remove the recommendation for building
	Win32 binaries under Cygwin; mention MinGW as an alternative
	environment.

2010-03-08  Michal Ludvig <mludvig@logix.net.nz>

	* ser_posix.c(ser_set_dtr_rts): Fixed DTR on/off to make
	  Arduino auto-reset work. (bug #29108, patch #7100)

2010-03-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* buspirate.c: Replace printf() by fprintf(stderr)
	* safemode.c: (Dito.)
	* usbtiny.c: (Dito.)

2010-01-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Cleanup Cygwin builds.
	* windows/Makefile.am (loaddrv_LDFLAGS): remove, the -mno-cygwin
	flag is supposed to be set in CFLAGS by ./configure
	* configure.ac: add a check for the presence of usleep(), add a